name:                puzzle-draw-cmdline
version:             0.1.0.0
synopsis:            Creating graphics for logic puzzles, command line tools.
license:             MIT
license-file:        LICENSE
author:              Robert Vollmert
maintainer:          rob@krikkit.org
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8

library
  -- Modules exported by the library.
  exposed-modules:     Puzzles.Diagrams.CmdLineSized

  -- Modules included in this library but not exported.
  -- other-modules:       
  
  -- Other library packages from which modules are imported.
  build-depends:       base >= 4.2 && < 4.8,
                       diagrams-lib >= 0.6 && < 1.1,
                       optparse-applicative >= 0.7 && < 0.8,
                       filepath >= 1.3 && < 1.4,
                       diagrams-cairo >= 1.0 && < 1.1
  hs-source-dirs:      src

executable drawpuzzle
  main-is:          drawpuzzle.hs
  hs-source-dirs:   src/tools
  build-depends:       base >= 4.2 && < 4.8,
                       puzzle-draw,
                       diagrams-lib >= 0.6 && < 1.1,
                       diagrams-cairo >= 1.0 && < 1.1,
                       yaml >= 0.8 && < 0.9,
                       optparse-applicative >= 0.7 && < 0.8,
                       aeson >= 0.7 && < 0.8,
                       filepath >= 1.3 && < 1.4
